# learnings

ai-machine-learning/ieb/: .gitignore  pyproject.toml
ai-machine-learning/ieb/final/: student_dropout_risk_dataset_gaussiannoise.csv  student_dropout_risk_model.ipynb
ai-machine-learning/ieb/sprint1/: sprint1.ipynb
ai-machine-learning/ieb/sprint2/: BDFU_Clase2_Análisis_exploratorio_de_un_dataset.ipynb  BDFU_Clase2_Predicción_Regresion_lineal_multiple_escenarios.ipynb  recursos_de_la_clase.ipynb  sprint2.ipynb
ai-machine-learning/ieb/sprint3/: arquitectura_cloud - LinoBossio.mmd  sprint3 - LinoBossio.ipynb  sprint3.ipynb
